--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>CO2 Emissions by Year - Jim Vallandingham</title>
+  <title>FutureAdvisor - Why Index Funds</title>
   <meta name="description" content="An example of small multiples with detail zoom">
   <meta name="author" content="Jim Vallandingham">
 
@@ -26,8 +26,8 @@
 
   <div id="container" class="container">
     <header>
-    <h1>C02 Emissions of Current Top Emitters by Year</h1>
-    <h2>Values in thousands of metric tons (kt)</h2>
+    <h1>FutureAdvisor - Why Index Funds</h1>
+    <h2>10 year return vs. expense ratio</h2>
     </header>
     <div id="main" role="main">
       <div id="vis">
